--- a/.github/workflows/clean_old.yml
+++ b/.github/workflows/clean_old.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Clean old images
         uses: retech-us/clean-ghcr-action@v4.1
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.TEST_TOKEN_30 }}
           repository_owner: someq
           repository: test-package-clean-action
           untagged_only: false
