--- a/.github/workflows/clean_untagged.yml
+++ b/.github/workflows/clean_untagged.yml
@@ -10,7 +10,7 @@ jobs:
       - name: Clean untagged images
         uses: retech-us/clean-ghcr-action@v4.1
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.TEST_TOKEN_30 }}
           repository_owner: someq
           repository: test-package-clean-action
           untagged_only: true
