--- a/.github/workflows/test_env.yml
+++ b/.github/workflows/test_env.yml
@@ -10,10 +10,10 @@ on:
         default: ${{ vars.TEST_VAR_REPO }}
         
 env:
-  TEST_VAR_1: ${{ inputs.test-env || vars.TEST_VAR_REPO || v1-env }}
-  TEST_VAR_2: ${{ inputs.no-var || vars.TEST_VAR_REPO || v2-env }}
-  TEST_VAR_3: ${{ inputs.test-env-default-var || v3-env }}
-  TEST_VAR_4: ${{ inputs.no-var || vars.no-var || v4-env }}
+  TEST_VAR_1: ${{ inputs.test-env || vars.TEST_VAR_REPO || 'v1-env' }}
+  TEST_VAR_2: ${{ inputs.no-var || vars.TEST_VAR_REPO || 'v2-env' }}
+  TEST_VAR_3: ${{ inputs.test-env-default-var || 'v3-env' }}
+  TEST_VAR_4: ${{ inputs.no-var || vars.no-var || 'v4-env' }}
 
 jobs:
   display_vars:
