--- a/.github/workflows/test_env.yml
+++ b/.github/workflows/test_env.yml
@@ -5,15 +5,12 @@ on:
   workflow_dispatch:
     inputs:
       test-env:
-        default: v-inp
-      test-env-default-var:
-        default: ${{ vars.TEST_VAR_REPO }}
+        default: 'v-inp'
         
 env:
   TEST_VAR_1: ${{ inputs.test-env || vars.TEST_VAR_REPO || 'v1-env' }}
   TEST_VAR_2: ${{ inputs.no-var || vars.TEST_VAR_REPO || 'v2-env' }}
-  TEST_VAR_3: ${{ inputs.test-env-default-var || 'v3-env' }}
-  TEST_VAR_4: ${{ inputs.no-var || vars.no-var || 'v4-env' }}
+  TEST_VAR_3: ${{ inputs.no-var || vars.no-var || 'v3-env' }}
 
 jobs:
   display_vars:
@@ -24,8 +21,6 @@ jobs:
         run: |
             echo RV ${{ vars.TEST_VAR_REPO }}
             echo INP ${{ inputs.test-env }}
-            echo INP_DEF ${{ inputs.test-env-default-var }}
             echo TV1 ${{ env.TEST_VAR_1 }}
             echo TV2 ${{ env.TEST_VAR_2 }}
             echo TV3 ${{ env.TEST_VAR_3 }}
-            echo TV3 ${{ env.TEST_VAR_4 }}
