--- a/.github/workflows/test_exact.yml
+++ b/.github/workflows/test_exact.yml
@@ -26,7 +26,7 @@ jobs:
           untagged_only: true
           owner_type: user
           older: ${{ env.UNTAGGED_MAX_AGE }}
-          package_names: test-package-clean-action
+          package_name: test-package-clean-action
 
       - name: Clean tagged older than ${{ env.TAGGED_MAX_AGE }}
         uses: retech-us/clean-ghcr-action@v4.1.1
@@ -37,4 +37,4 @@ jobs:
           untagged_only: false
           owner_type: user
           older: ${{ env.TAGGED_MAX_AGE }}
-          package_names: test-package-clean-action
+          package_name: test-package-clean-action
