--- a/.github/workflows/test_exact.yml
+++ b/.github/workflows/test_exact.yml
@@ -18,7 +18,7 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - name: Clean untagged older than ${{ env.UNTAGGED_MAX_AGE }}
-        uses: retech-us/clean-ghcr-action@v4.1.3
+        uses: retech-us/clean-ghcr-action@v4.1
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           repository_owner: someq
@@ -26,9 +26,10 @@ jobs:
           untagged_only: true
           owner_type: user
           older: ${{ env.UNTAGGED_MAX_AGE }}
+          package_name: test-package-clean-action
 
       - name: Clean tagged older than ${{ env.TAGGED_MAX_AGE }}
-        uses: retech-us/clean-ghcr-action@v4.1.3
+        uses: retech-us/clean-ghcr-action@v4.1
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           repository_owner: someq
@@ -36,3 +37,4 @@ jobs:
           untagged_only: false
           owner_type: user
           older: ${{ env.TAGGED_MAX_AGE }}
+          package_name: test-package-clean-action
