--- a/.github/workflows/test_exact.yml
+++ b/.github/workflows/test_exact.yml
@@ -9,6 +9,7 @@ on:
       untagged-max-age:
         default: '2592000'  # 1 month
 permissions:
+  contents: read
   packages: write
 env:
   TAGGED_MAX_AGE: ${{ inputs.tagged-max-aage || vars.DELETE_TAGGED_MAX_AGE || '7776000' }}
@@ -20,7 +21,7 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - name: Clean untagged older than ${{ env.UNTAGGED_MAX_AGE }}
-        uses: retech-us/clean-ghcr-action@v4.1
+        uses: retech-us/clean-ghcr-action@v4.1.5
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           repository_owner: someq
@@ -28,10 +29,9 @@ jobs:
           untagged_only: true
           owner_type: user
           older: ${{ env.UNTAGGED_MAX_AGE }}
-          package_name: test-package-clean-action
 
       - name: Clean tagged older than ${{ env.TAGGED_MAX_AGE }}
-        uses: retech-us/clean-ghcr-action@v4.1
+        uses: retech-us/clean-ghcr-action@v4.1.5
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           repository_owner: someq
@@ -39,4 +39,3 @@ jobs:
           untagged_only: false
           owner_type: user
           older: ${{ env.TAGGED_MAX_AGE }}
-          package_name: test-package-clean-action
