--- a/.github/workflows/test_exact.yml
+++ b/.github/workflows/test_exact.yml
@@ -11,7 +11,7 @@ on:
 permissions:
   packages: write
 env:
-  TAGGED_MAX_AGE: ${{ inputs.tagged-max-aage || vars.DELETE_TAGGED_MAX_AGE || '7776000' }}
+  TAGGED_MAX_AGE: ${{ inputs.tagged-max-age || vars.DELETE_TAGGED_MAX_AGE || '7776000' }}
   UNTAGGED_MAX_AGE: ${{ inputs.untagged-max-age || vars.DELETE_UNTAGGED_MAX_AGE || '2592000' }}
 
 jobs:
